.kustomize/ingresses/synology/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synology-service
spec:
  type: ExternalName
  externalName: nas.local
  ports:
  - port: 80
    targetPort: 80
  - port: 443
    targetPort: 443
