.kustomize/ingresses/synology/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synology-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "1000m"
spec:
  ingressClassName: nginx-vpn-external
  rules:
  - host: nas.josephang.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: synology-service
            port:
              number: 80
  tls:
  - hosts:
    - nas.josephang.space
    secretName: josephang-space-tls
